Add dockerfile for dev

--- a/storage/package.json
+++ b/storage/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "start": "node_modules/.bin/coffee index.coffee",
     "test": "node_modules/.bin/mocha",
-    "dev": "node_modules/.bin/nodemon --exec node_modules/.bin/coffee index.coffee"
+    "dev": "docker run --rm -it -v $PWD:/usr/src/app -w /usr/src/app --link db:db -p 8081:8081 iojs node_modules/.bin/nodemon --exec node_modules/.bin/coffee index.coffee"
   },
   "dependencies": {
     "bluebird": "^2.9.13",
