--- a/storage/package.json
+++ b/storage/package.json
@@ -15,6 +15,7 @@
     "bluebird": "^2.9.13",
     "body-parser": "^1.12.2",
     "coffee-script": "^1.9.1",
+    "csv": "^0.4.2",
     "express": "^4.12.2",
     "pg": "^4.3.0",
     "squel": "^3.10.0",
