--- a/storage/package.json
+++ b/storage/package.json
@@ -20,7 +20,8 @@
     "pg": "^4.3.0",
     "squel": "^3.10.0",
     "superagent-as-promised": "^2.0.0",
-    "uuid": "^2.0.1"
+    "uuid": "^2.0.1",
+    "xml2js": "^0.4.9"
   },
   "devDependencies": {
     "chai": "^2.1.2",
