--- a/storage/package.json
+++ b/storage/package.json
@@ -16,6 +16,7 @@
     "body-parser": "^1.12.2",
     "coffee-script": "^1.9.1",
     "csv": "^0.4.2",
+    "debug": "^2.2.0",
     "express": "^4.12.2",
     "pg": "^4.3.0",
     "squel": "^3.10.0",
