--- a/web2/package.json
+++ b/web2/package.json
@@ -10,10 +10,13 @@
   "license": "ISC",
   "dependencies": {
     "FileSaver": "^0.10.0",
+    "flummox": "^3.5.2",
     "jquery": "^2.1.4",
-    "jszip": "^2.5.0"
+    "jszip": "^2.5.0",
+    "react": "^0.13.3"
   },
   "devDependencies": {
+    "cjsx-loader": "^2.0.1",
     "coffee-loader": "^0.7.2",
     "coffee-script": "^1.9.3",
     "css-loader": "^0.14.5",
