--- a/web2/package.json
+++ b/web2/package.json
@@ -9,12 +9,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "FileSaver": "^0.10.0",
+    "bluebird": "^2.9.27",
+    "classnames": "^2.1.2",
     "flummox": "^3.5.2",
     "flummox-localstore": "^2.0.1",
     "jquery": "^2.1.4",
     "jszip": "^2.5.0",
-    "react": "^0.13.3"
+    "lodash": "^3.9.3",
+    "node-safe-filesaver": "^0.1.0",
+    "react": "^0.13.3",
+    "request-promise": "^0.4.2"
   },
   "devDependencies": {
     "cjsx-loader": "^2.0.1",
