--- a/web2/package.json
+++ b/web2/package.json
@@ -6,8 +6,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
-  "license": "ISC",
+  "author": "foobert",
+  "license": "all rights reserved",
+  "readme": "README.md",
   "dependencies": {
     "bluebird": "^2.9.27",
     "classnames": "^2.1.2",
