--- a/web2/package.json
+++ b/web2/package.json
@@ -27,6 +27,7 @@
     "coffee-loader": "^0.7.2",
     "coffee-script": "^1.9.3",
     "css-loader": "^0.14.5",
+    "file-loader": "^0.8.4",
     "node-libs-browser": "^0.5.2",
     "style-loader": "^0.12.3",
     "webpack": "^1.9.10",
