--- a/web2/package.json
+++ b/web2/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
+    "start": "NODE_ENV=production node server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "NODE_ENV=production $(npm bin)/webpack -p",
     "dev": "$(npm bin)/webpack-dev-server --progress --colors --port 9090"
@@ -16,6 +16,7 @@
     "autoprefixer-core": "^5.2.0",
     "bluebird": "^2.9.27",
     "classnames": "^2.1.2",
+    "compression": "^1.5.0",
     "express": "^4.12.4",
     "flummox": "^3.5.2",
     "flummox-localstore": "^2.0.1",
