--- a/web2/package.json
+++ b/web2/package.json
@@ -24,6 +24,7 @@
     "jszip": "^2.5.0",
     "leaflet": "^0.7.3",
     "lodash": "^3.9.3",
+    "morgan": "^1.6.0",
     "node-safe-filesaver": "^0.1.0",
     "postcss-loader": "^0.5.0",
     "react": "^0.13.3",
