--- a/web2/package.json
+++ b/web2/package.json
@@ -37,6 +37,7 @@
     "css-loader": "^0.14.5",
     "file-loader": "^0.8.4",
     "node-libs-browser": "^0.5.2",
+    "semantic-ui-css": "^1.12.3",
     "style-loader": "^0.12.3",
     "webpack": "^1.9.10",
     "webpack-dev-server": "^1.9.0"
