--- a/web2/package.json
+++ b/web2/package.json
@@ -39,6 +39,7 @@
     "node-libs-browser": "^0.5.2",
     "semantic-ui-css": "^1.12.3",
     "style-loader": "^0.12.3",
+    "url-loader": "^0.5.6",
     "webpack": "^1.9.10",
     "webpack-dev-server": "^1.9.0"
   }
