--- a/storage/package.json
+++ b/storage/package.json
@@ -20,6 +20,7 @@
     "csv": "^0.4.2",
     "debug": "^2.2.0",
     "express": "^4.12.2",
+    "jade": "^1.11.0",
     "lodash": "^3.9.3",
     "pg": "^4.3.0",
     "squel": "^3.10.0",
