--- a/route/package.json
+++ b/route/package.json
@@ -9,5 +9,8 @@
     "commander": "^2.7.1",
     "debug": "^2.1.3",
     "superagent": "^1.1.0"
+  },
+  "devDependencies": {
+    "coffee-script": "^1.9.3"
   }
 }
