--- a/web/package.json
+++ b/web/package.json
@@ -29,6 +29,7 @@
     "node-safe-filesaver": "^0.1.0",
     "postcss-loader": "^0.5.0",
     "react": "^0.13.3",
+    "semantic-ui-css": "^2.0.3",
     "superagent": "^1.2.0"
   },
   "devDependencies": {
