--- a/web/package.json
+++ b/web/package.json
@@ -23,7 +23,7 @@
     "flummox-localstore": "^2.0.1",
     "immutable": "^3.7.3",
     "jszip": "^2.5.0",
-    "leaflet": "^0.7.3",
+    "leaflet": "^1.0.0-beta.1",
     "lodash": "^3.10.0",
     "morgan": "^1.6.1",
     "node-safe-filesaver": "^0.1.0",
