--- a/web/package.json
+++ b/web/package.json
@@ -15,6 +15,7 @@
   "readme": "README.md",
   "dependencies": {
     "autoprefixer-core": "^5.2.0",
+    "babel-runtime": "^5.7.0",
     "bluebird": "^2.9.34",
     "classnames": "^2.1.3",
     "compression": "^1.5.1",
@@ -29,9 +30,13 @@
     "node-safe-filesaver": "^0.1.0",
     "react": "^0.13.3",
     "semantic-ui-css": "^2.0.4",
-    "superagent": "^1.2.0"
+    "superagent": "^1.2.0",
+    "superagent-as-promised": "^3.1.1",
+    "xml2js": "^0.4.9"
   },
   "devDependencies": {
+    "babel-core": "^5.7.4",
+    "babel-loader": "^5.3.2",
     "cjsx-loader": "^2.0.1",
     "coffee-loader": "^0.7.2",
     "coffee-script": "^1.9.3",
