--- a/web/package.json
+++ b/web/package.json
@@ -7,7 +7,7 @@
     "start": "NODE_ENV=production node server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "NODE_ENV=production $(npm bin)/webpack -p --optimize-minimize",
-    "dev": "$(npm bin)/webpack-dev-server --progress --colors --port 9090",
+    "dev": "node server-dev.js",
     "size": "$(npm bin)/webpack -p --optimize-minimize --json > stats.json && $(npm bin)/analyze-bundle-size stats.json; rm -f stats.json"
   },
   "author": "foobert",
@@ -44,6 +44,7 @@
     "file-loader": "^0.8.4",
     "node-libs-browser": "^0.5.2",
     "postcss-loader": "^0.5.0",
+    "react-hot-loader": "^1.2.8",
     "style-loader": "^0.12.3",
     "url-loader": "^0.5.6",
     "webpack": "^1.10.1",
