--- a/web/package.json
+++ b/web/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start": "NODE_ENV=production node server.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "$(npm bin)/mocha",
     "build": "NODE_ENV=production $(npm bin)/webpack -p --optimize-minimize",
     "dev": "node server-dev.js",
     "size": "$(npm bin)/webpack -p --optimize-minimize --json > stats.json && $(npm bin)/analyze-bundle-size stats.json; rm -f stats.json"
@@ -37,14 +37,17 @@
   "devDependencies": {
     "babel-core": "^5.7.4",
     "babel-loader": "^5.3.2",
+    "chai": "^3.2.0",
     "cjsx-loader": "^2.0.1",
     "coffee-loader": "^0.7.2",
     "coffee-script": "^1.9.3",
     "css-loader": "^0.15.5",
     "file-loader": "^0.8.4",
+    "mocha": "^2.2.5",
     "node-libs-browser": "^0.5.2",
     "postcss-loader": "^0.5.0",
     "react-hot-loader": "^1.2.8",
+    "selenium-webdriver": "^2.46.1",
     "style-loader": "^0.12.3",
     "url-loader": "^0.5.6",
     "webpack": "^1.10.1",
