--- a/web/package.json
+++ b/web/package.json
@@ -1,56 +1,71 @@
 {
-  "name": "gc-web",
+  "name": "r3-foundation",
   "version": "1.0.0",
-  "description": "",
-  "main": "server.js",
+  "description": "redux-react-router and foundation boilerplate",
+  "keywords": [
+    "redux",
+    "react",
+    "router",
+    "routing",
+    "frontend",
+    "client",
+    "webpack",
+    "babel",
+    "sass",
+    "foundation",
+    "postcss"
+  ],
+  "main": "index.js",
   "scripts": {
-    "start": "NODE_ENV=production node server.js",
-    "test": "$(npm bin)/mocha",
-    "build": "NODE_ENV=production $(npm bin)/webpack -p --optimize-minimize",
-    "dev": "node server-dev.js",
-    "size": "$(npm bin)/webpack -p --optimize-minimize --json > stats.json && $(npm bin)/analyze-bundle-size stats.json; rm -f stats.json"
+    "start": "node server"
   },
-  "author": "foobert",
-  "license": "all rights reserved",
-  "readme": "README.md",
+  "author": "Anton Wilhelm",
+  "license": "ISC",
   "dependencies": {
-    "autoprefixer-core": "^5.2.0",
-    "babel-runtime": "^5.7.0",
-    "bluebird": "^2.9.34",
-    "classnames": "^2.1.3",
-    "compression": "^1.5.1",
-    "express": "^4.13.1",
-    "flummox": "^3.5.2",
-    "flummox-localstore": "^2.0.1",
-    "immutable": "^3.7.3",
-    "jszip": "^2.5.0",
-    "leaflet": "^1.0.0-beta.1",
-    "lodash": "^3.10.0",
-    "morgan": "^1.6.1",
-    "node-safe-filesaver": "^0.1.0",
-    "react": "^0.13.3",
-    "semantic-ui-css": "^2.0.4",
-    "superagent": "^1.2.0",
-    "superagent-as-promised": "^3.1.1",
-    "xml2js": "^0.4.9"
+    "classnames": "^2.2.0",
+    "font-awesome": "^4.3.0",
+    "foundation-sites": "^6.1.2",
+    "jquery": "^1.12.4",
+    "leaflet": "^1.0.3",
+    "react": "^0.14.5",
+    "react-addons-update": "^0.14.7",
+    "react-dom": "^0.14.7",
+    "react-redux": "^4.4.5",
+    "react-router": "2.0.0-rc5",
+    "react-router-redux": "^2.1.0",
+    "redux": "^3.2.1",
+    "redux-logger": "^2.5.2",
+    "redux-thunk": "^1.0.3",
+    "superagent": "^3.5.2",
+    "what-input": "^1.1.4"
   },
+  "optionalDependencies": {},
   "devDependencies": {
-    "babel-core": "^5.7.4",
-    "babel-loader": "^5.3.2",
-    "chai": "^3.2.0",
-    "cjsx-loader": "^2.0.1",
-    "coffee-loader": "^0.7.2",
-    "coffee-script": "^1.9.3",
-    "css-loader": "^0.15.5",
-    "file-loader": "^0.8.4",
-    "mocha": "^2.2.5",
-    "node-libs-browser": "^0.5.2",
-    "postcss-loader": "^0.5.0",
-    "react-hot-loader": "^1.2.8",
-    "selenium-webdriver": "^2.46.1",
-    "style-loader": "^0.12.3",
-    "url-loader": "^0.5.6",
-    "webpack": "^1.10.1",
-    "webpack-dev-server": "^1.10.1"
+    "autoprefixer": "^6.3.2",
+    "babel-core": "^6.3.15",
+    "babel-loader": "^6.2.0",
+    "babel-plugin-transform-runtime": "^6.5.0",
+    "babel-preset-es2015": "^6.3.13",
+    "babel-preset-react": "^6.3.13",
+    "babel-preset-react-hmre": "^1.0.1",
+    "babel-preset-stage-0": "^6.5.0",
+    "babel-runtime": "^6.9.2",
+    "css-loader": "^0.23.1",
+    "express": "^4.13.3",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "file-loader": "^0.8.5",
+    "node-sass": "^3.4.2",
+    "postcss-loader": "^0.8.0",
+    "redux-devtools": "^3.1.0",
+    "redux-devtools-dock-monitor": "^1.0.1",
+    "redux-devtools-log-monitor": "^1.0.3",
+    "sass-loader": "^3.1.2",
+    "script-loader": "^0.6.1",
+    "serve-static": "^1.11.1",
+    "style-loader": "^0.13.0",
+    "url-loader": "^0.5.7",
+    "webpack": "^1.9.11",
+    "webpack-dev-middleware": "^1.2.0",
+    "webpack-hot-middleware": "^2.2.0"
   }
 }
