--- a/storage/package.json
+++ b/storage/package.json
@@ -22,16 +22,18 @@
     "express": "^4.12.2",
     "jade": "^1.11.0",
     "lodash": "^3.9.3",
+    "mongodb": "^2.2.31",
     "pg": "^4.3.0",
     "squel": "^3.10.0",
-    "superagent-as-promised": "^2.0.0",
+    "stream-filter": "^2.1.0",
+    "superagent": "^3.6.0",
     "uuid": "^2.0.1",
     "xml2js": "^0.4.9"
   },
   "devDependencies": {
     "chai": "^2.1.2",
     "mocha": "^2.2.5",
-    "moment": "^2.10.6",
+    "moment": "^2.18.1",
     "nodemon": "^1.3.7"
   }
 }
